--- a/android_app/app/src/main/res/layout/item_mail.xml
+++ b/android_app/app/src/main/res/layout/item_mail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="12dp"
+    android:paddingVertical="8dp"
     android:background="@color/mail_background">
 
         <ImageView
