--- a/android_app/app/src/main/res/values/colors.xml
+++ b/android_app/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="mail_unread_subject">#000000</color>
     <color name="mail_preview_text">#757575</color>
     <color name="mail_read_all">#757575</color>
+    <color name="mail_draft_text">#D32F2F</color>
 </resources>
