--- a/android_app/app/src/main/res/layout/item_mail.xml
+++ b/android_app/app/src/main/res/layout/item_mail.xml
@@ -14,7 +14,8 @@
             android:layout_height="32dp"
             android:layout_marginEnd="12dp"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_person"
+            android:src="@drawable/ic_person"
+            android:scaleType="centerCrop"
             android:contentDescription="Sender avatar" />
 
         <LinearLayout
