--- a/android_app/app/src/main/res/menu/navigation_menu.xml
+++ b/android_app/app/src/main/res/menu/navigation_menu.xml
@@ -37,17 +37,11 @@
         </menu>
     </item>
 
-    <item android:title="Settings">
-        <menu>
-            <item
-                android:id="@+id/nav_settings"
-                android:icon="@drawable/ic_settings"
-                android:title="Settings" />
-            <item
-                android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_logout"
-                android:title="Logout" />
-        </menu>
-    </item>
+    <group android:id="@+id/logout_group">
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_logout"
+            android:title="Logout" />
+    </group>
 
 </menu> 
