--- a/android_app/app/src/main/res/layout/activity_home.xml
+++ b/android_app/app/src/main/res/layout/activity_home.xml
@@ -40,7 +40,7 @@
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_menu"
                     android:contentDescription="Open sidebar"
-                    android:tint="@color/black" />
+                    android:tint="@color/menu_icon_tint" />
 
                 <!-- Search EditText -->
                 <EditText
@@ -52,7 +52,7 @@
                     android:layout_marginEnd="16dp"
                     android:hint="Search mails..."
                     android:textColorHint="@android:color/darker_gray"
-                    android:textColor="@color/black"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:background="@android:color/transparent"
                     android:padding="0dp"
                     android:inputType="text" />
@@ -65,7 +65,7 @@
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_person"
                     android:contentDescription="User Profile"
-                    android:tint="@color/black"
+                    android:tint="@color/profile_icon_tint"
                     android:scaleType="centerCrop" />
 
             </LinearLayout>
@@ -151,11 +151,13 @@
     <!-- Navigation Drawer -->
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
+        style="@style/CompactNavigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
-        app:menu="@menu/navigation_menu" />
+        app:menu="@menu/navigation_menu"
+        app:itemTextColor="@color/navigation_icon_tint" />
 
 </androidx.drawerlayout.widget.DrawerLayout> 
