--- a/android_app/app/src/main/res/layout/nav_header_home.xml
+++ b/android_app/app/src/main/res/layout/nav_header_home.xml
@@ -4,25 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@color/mail_background"
-    android:gravity="bottom"
+    android:gravity="center_vertical"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="50dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Light">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView
+    <ImageView
         android:id="@+id/nav_header_logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="LOGO"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:src="@drawable/logo_b"
+        android:scaleType="fitCenter"
+        android:contentDescription="EYO Mail Logo" />
 
 </LinearLayout> 
