--- a/android_app/app/src/main/res/values/dimens.xml
+++ b/android_app/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Navigation Header -->
-    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="nav_header_height">120dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     
     <!-- Default screen margins -->
@@ -10,4 +10,9 @@
     
     <!-- FAB margin -->
     <dimen name="fab_margin">16dp</dimen>
+    
+    <!-- Navigation View -->
+    <dimen name="nav_item_icon_size">20dp</dimen>
+    <dimen name="nav_item_text_size">13sp</dimen>
+    <dimen name="nav_item_height">40dp</dimen>
 </resources> 
