--- a/android_app/app/src/main/res/layout/activity_registration.xml
+++ b/android_app/app/src/main/res/layout/activity_registration.xml
@@ -14,22 +14,29 @@
         android:padding="24dp"
         android:gravity="center">
 
-        <!-- Logo -->
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/logo_b"
-            android:layout_marginBottom="24dp"
-            android:contentDescription="App Logo" />
-
-        <TextView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create Account"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginBottom="32dp" />
+            android:orientation="horizontal"
+            android:layout_marginBottom="40dp">
+
+            <!-- Logo -->
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="45dp"
+                android:contentDescription="App Logo"
+                android:src="@drawable/logo_b"
+                android:layout_marginRight="20dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Create Account"
+                android:textSize="28sp"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
